--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="peace">
     <meta name="keywords" content="peace多,个人主页">
     <meta name="author" content="peace多">
-    <title>宇的主页</title>
+    <title>XY0hkz的主页</title>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/iconfont.css">
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.jpg">
